--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -56,12 +56,13 @@
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'feat7(EDA1)/wip'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -70,8 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat9/EDA2/wip aaf449f] Modified the code, prepare for training\n",
-      " 2 files changed, 17 insertions(+), 14 deletions(-)\n",
+      "[feat9/EDA2/wip c3d7468] Submitted file, modified markdown\n",
+      " 2 files changed, 50 insertions(+), 33 deletions(-)\n",
       "Branch feat9/EDA2/wip set up to track remote branch feat9/EDA2/wip from origin.\n"
      ]
     },
@@ -80,7 +81,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      " * [new branch]      feat9/EDA2/wip -> feat9/EDA2/wip\n"
+      "   d0d774e..c3d7468  feat9/EDA2/wip -> feat9/EDA2/wip\n"
      ]
     }
    ],
@@ -88,7 +89,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Submitted file, modified markdown'\n",
+    "git commit -m 'Dummy commit'\n",
     "git push --set-upstream origin 'feat9/EDA2/wip'"
    ]
   },
