Branched to seb-feat7

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -21,26 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\tTitanic.ipynb\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTest_data.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
+      "Switched to a new branch 'feat7(EDA1)/pclass/wip'\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'EDA1/wip'\n",
-    "git fetch"
+    "git checkout -b 'feat7(EDA1)/pclass/wip'"
    ]
   },
   {
@@ -72,8 +75,8 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Submitted to Kaggle, Dummy Commit to change branch'\n",
-    "git push --set-upstream origin 'feat7(EDA1)/wip'"
+    "git commit -m 'Branched to seb-feat7'\n",
+    "git push --set-upstream origin 'feat7(EDA1)/pclass/wip'"
    ]
   },
   {
