Modified code for training

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -57,9 +57,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip d119015] Modified head markdown\n",
-      " 1 file changed, 6 insertions(+), 6 deletions(-)\n",
-      "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
+      "[feat7(EDA1)/pclass/wip 4e4cf2b] Branched to seb-feat7\n",
+      " 1 file changed, 12 insertions(+), 9 deletions(-)\n",
+      "Branch feat7(EDA1)/pclass/wip set up to track remote branch feat7(EDA1)/pclass/wip from origin.\n"
      ]
     },
     {
@@ -67,7 +67,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   11d36d8..d119015  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      " * [new branch]      feat7(EDA1)/pclass/wip -> feat7(EDA1)/pclass/wip\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Branched to seb-feat7'\n",
+    "git commit -m 'Modified code for training'\n",
     "git push --set-upstream origin 'feat7(EDA1)/pclass/wip'"
    ]
   },
@@ -1374,7 +1374,7 @@
    },
    "outputs": [],
    "source": [
-    "num_attri = ['Age','SibSp','Parch','Fare']\n",
+    "num_attri = ['Age','SibSp','Parch','Fare','Pclass']\n",
     "cat_attri = [column for column in X if (column not in num_attri and column != 'Survived')]"
    ]
   },
