--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -58,17 +58,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip d4d320a] Created submission File\n",
-      " 2 files changed, 488 insertions(+), 458 deletions(-)\n",
-      " rewrite Test_data.ipynb (92%)\n",
-      "Branch master set up to track remote branch master from origin.\n"
+      "[feat7(EDA1)/pclass/wip 9759592] Submitted the file\n",
+      " 2 files changed, 383 insertions(+), 354 deletions(-)\n",
+      "Branch feat7(EDA1)/pclass/wip set up to track remote branch feat7(EDA1)/pclass/wip from origin.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\n"
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      "   153aef1..9759592  feat7(EDA1)/pclass/wip -> feat7(EDA1)/pclass/wip\n"
      ]
     }
    ],
