--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -21,29 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "M\tTitanic.ipynb\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Switched to a new branch 'feat7(EDA1)/pclass/wip'\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTest_data.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'feat7(EDA1)/pclass/wip'"
+    "git checkout 'feat6/wip'\n",
+    "git fetch"
    ]
   },
   {
@@ -75,7 +72,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'Modified code for training'\n",
+    "git commit -m 'dummy commit'\n",
     "git push --set-upstream origin 'feat7(EDA1)/pclass/wip'"
    ]
   },
