Branched to Pclass sub of feat6 branch

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -17,26 +17,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTitanic.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
+      "  CV_check\n",
+      "  EDA1/wip\n",
+      "  EDA2/wip\n",
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "  feat3/wip\n",
+      "  feat4/wip\n",
+      "  feat5/wip\n",
+      "* feat6/pclass/wip\n",
+      "  feat6/wip\n",
+      "  feat7(EDA1)/pclass/wip\n",
+      "  feat7(EDA1)/wip\n",
+      "  feat8(EDA2)/wip\n",
+      "  feat9/EDA2/wip\n",
+      "  master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'feat7(EDA1)/wip'\n",
-    "git fetch"
+    "git branch"
    ]
   },
   {
@@ -67,8 +82,8 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git add Test_data.ipynb\n",
-    "git commit -m 'Dummy commit,Just a visit to view code'\n",
-    "git push --set-upstream origin feat5/wip"
+    "git commit -m 'Branched to Pclass sub of feat6 branch'\n",
+    "git push --set-upstream origin 'feat6/pclass/wip'"
    ]
   },
   {
@@ -79,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "filename ='feat6.sav'"
+    "filename ='feat6_pclass.sav'"
    ]
   },
   {
