Modified training code, initiating training

--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -5,31 +5,47 @@
    "metadata": {},
    "source": [
     "## Test Data Prediction\n",
+    "### feat6-sub Pclass\n",
     "This notebook will be used to open test.csv file and use designated model to predict the test data for kaggle submission."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTest_data.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
+      "  CV_check\n",
+      "  EDA1/wip\n",
+      "  EDA2/wip\n",
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "  feat3/wip\n",
+      "  feat4/wip\n",
+      "  feat5/wip\n",
+      "* feat6/pclass/wip\n",
+      "  feat6/wip\n",
+      "  feat7(EDA1)/pclass/wip\n",
+      "  feat7(EDA1)/wip\n",
+      "  feat8(EDA2)/wip\n",
+      "  feat9/EDA2/wip\n",
+      "  master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'feat7(EDA1)/wip'\n",
-    "git fetch"
+    "git branch"
    ]
   },
   {
@@ -60,7 +76,7 @@
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
     "git commit -m 'Dummy push'\n",
-    "git push --set-upstream origin feat2/wip"
+    "git push --set-upstream origin feat6/pclas/wip"
    ]
   },
   {
