--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -65,16 +65,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat6/wip 2fa43b7] Finished training, need to test with test set\n",
-      " 2 files changed, 1506 insertions(+), 1477 deletions(-)\n",
-      "Branch feat5/wip set up to track remote branch feat5/wip from origin.\n"
+      "[feat6/pclass/wip 4a0fadc] Branched to Pclass sub of feat6 branch\n",
+      " 1 file changed, 26 insertions(+), 11 deletions(-)\n",
+      "Branch feat6/pclass/wip set up to track remote branch feat6/pclass/wip from origin.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\n"
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      " * [new branch]      feat6/pclass/wip -> feat6/pclass/wip\n"
      ]
     }
    ],
@@ -82,7 +83,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git add Test_data.ipynb\n",
-    "git commit -m 'Branched to Pclass sub of feat6 branch'\n",
+    "git commit -m 'Modified training code, initiating training'\n",
     "git push --set-upstream origin 'feat6/pclass/wip'"
    ]
   },
@@ -457,7 +458,7 @@
    "source": [
     "#Divide Numerical and Categorical attributes\n",
     "#Pclass is actually categorical\n",
-    "num_attri = ['Age','SibSp','Parch','Fare']\n",
+    "num_attri = ['Age','SibSp','Parch','Fare','Pclass']\n",
     "cat_attri = [column for column in X if (column not in num_attri and column != 'Survived')]\n",
     "#print(num_attri)\n",
     "#print(cat_attri)\n",
