--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -17,46 +17,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  CV_check\n",
-      "  EDA1/wip\n",
-      "  EDA2/wip\n",
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/score1/wip\n",
-      "  feat2/wip\n",
-      "  feat3/wip\n",
-      "  feat4/wip\n",
-      "  feat5/wip\n",
-      "* feat6/pclass/wip\n",
-      "  feat6/wip\n",
-      "  feat7(EDA1)/pclass/wip\n",
-      "  feat7(EDA1)/wip\n",
-      "  feat8(EDA2)/wip\n",
-      "  feat9/EDA2/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTest_data.ipynb\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'feat7(EDA1)/wip'\n",
+    "git fetch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -65,8 +51,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat6/pclass/wip 9d9879d] Modified training code, initiating training\n",
-      " 2 files changed, 33 insertions(+), 16 deletions(-)\n",
+      "[feat6/pclass/wip bdc1634] Finished training\n",
+      " 1 file changed, 773 insertions(+), 783 deletions(-)\n",
       "Branch feat6/pclass/wip set up to track remote branch feat6/pclass/wip from origin.\n"
      ]
     },
@@ -75,7 +61,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   4a0fadc..9d9879d  feat6/pclass/wip -> feat6/pclass/wip\n"
+      "   9d9879d..bdc1634  feat6/pclass/wip -> feat6/pclass/wip\n"
      ]
     }
    ],
@@ -83,7 +69,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git add Test_data.ipynb\n",
-    "git commit -m 'Finished training'\n",
+    "git commit -m 'Dummy commit'\n",
     "git push --set-upstream origin 'feat6/pclass/wip'"
    ]
   },
