--- a/Test_data.ipynb
+++ b/Test_data.ipynb
@@ -76,7 +76,7 @@
     "%%bash\n",
     "git add 'Test_data.ipynb'\n",
     "git commit -m 'Dummy push'\n",
-    "git push --set-upstream origin feat6/pclas/wip"
+    "git push --set-upstream origin feat6/pclass/wip"
    ]
   },
   {
@@ -87,8 +87,8 @@
    },
    "outputs": [],
    "source": [
-    "model_ver = 'feat6.sav'\n",
-    "submission_name = 'feat6_test.csv'"
+    "model_ver = 'feat6_pclass.sav'\n",
+    "submission_name = 'feat6_pclass_test.csv'"
    ]
   },
   {
@@ -500,7 +500,7 @@
     "test = test.drop('Name',axis=1)\n",
     "test = test.drop('Cabin',axis=1)\n",
     "\n",
-    "num_attri = ['Age','SibSp','Parch','Fare']\n",
+    "num_attri = ['Age','SibSp','Parch','Fare','Pclass']\n",
     "#cat_attri = [column for column in test if (column not in num_attri and column != 'Survived')]\n",
     "cat_attri = [column for column in train if (column not in num_attri and column != 'Survived')] \n",
     "\n",
@@ -537,7 +537,7 @@
     {
      "data": {
       "text/plain": [
-       "['Pclass', 'Sex', 'Ticket', 'Embarked']"
+       "['Sex', 'Ticket', 'Embarked']"
       ]
      },
      "execution_count": 9,
@@ -570,10 +570,10 @@
        "      <th>Embarked_S</th>\n",
        "      <th>Fare</th>\n",
        "      <th>Parch</th>\n",
-       "      <th>Pclass_1</th>\n",
-       "      <th>Pclass_2</th>\n",
-       "      <th>Pclass_3</th>\n",
+       "      <th>Pclass</th>\n",
        "      <th>Sex_female</th>\n",
+       "      <th>Sex_male</th>\n",
+       "      <th>SibSp</th>\n",
        "      <th>...</th>\n",
        "      <th>Ticket_W./C. 14258</th>\n",
        "      <th>Ticket_W./C. 14260</th>\n",
@@ -596,7 +596,7 @@
        "      <td>0</td>\n",
        "      <td>7.8292</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -620,9 +620,9 @@
        "      <td>1</td>\n",
        "      <td>7.0000</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -644,9 +644,9 @@
        "      <td>0</td>\n",
        "      <td>9.6875</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -668,7 +668,7 @@
        "      <td>1</td>\n",
        "      <td>8.6625</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -692,9 +692,9 @@
        "      <td>1</td>\n",
        "      <td>12.2875</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -710,23 +710,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 941 columns</p>\n",
+       "<p>5 rows × 939 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Age  Embarked_C  Embarked_Q  Embarked_S     Fare  Parch  Pclass_1  \\\n",
-       "0  34.5           0           1           0   7.8292      0         0   \n",
-       "1  47.0           0           0           1   7.0000      0         0   \n",
-       "2  62.0           0           1           0   9.6875      0         0   \n",
-       "3  27.0           0           0           1   8.6625      0         0   \n",
-       "4  22.0           0           0           1  12.2875      1         0   \n",
+       "    Age  Embarked_C  Embarked_Q  Embarked_S     Fare  Parch  Pclass  \\\n",
+       "0  34.5           0           1           0   7.8292      0       3   \n",
+       "1  47.0           0           0           1   7.0000      0       3   \n",
+       "2  62.0           0           1           0   9.6875      0       2   \n",
+       "3  27.0           0           0           1   8.6625      0       3   \n",
+       "4  22.0           0           0           1  12.2875      1       3   \n",
        "\n",
-       "   Pclass_2  Pclass_3  Sex_female        ...         Ticket_W./C. 14258  \\\n",
-       "0         0         1           0        ...                        NaN   \n",
-       "1         0         1           1        ...                        NaN   \n",
-       "2         1         0           0        ...                        NaN   \n",
-       "3         0         1           0        ...                        NaN   \n",
-       "4         0         1           1        ...                        NaN   \n",
+       "   Sex_female  Sex_male  SibSp        ...         Ticket_W./C. 14258  \\\n",
+       "0           0         1      0        ...                        NaN   \n",
+       "1           1         0      1        ...                        NaN   \n",
+       "2           0         1      0        ...                        NaN   \n",
+       "3           0         1      0        ...                        NaN   \n",
+       "4           1         0      1        ...                        NaN   \n",
        "\n",
        "   Ticket_W./C. 14260  Ticket_W./C. 14263  Ticket_W./C. 14266  \\\n",
        "0                 0.0                 NaN                 0.0   \n",
@@ -749,7 +749,7 @@
        "3                   0               NaN               NaN  \n",
        "4                   0               NaN               NaN  \n",
        "\n",
-       "[5 rows x 941 columns]"
+       "[5 rows x 939 columns]"
       ]
      },
      "execution_count": 10,
@@ -777,7 +777,7 @@
    "outputs": [
     {
      "ename": "KeyError",
-     "evalue": "'Pclass'",
+     "evalue": "'Sex'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -792,13 +792,13 @@
       "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_loc (pandas/index.c:4279)\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/src/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas.hashtable.PyObjectHashTable.get_item (pandas/hashtable.c:13742)\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/src/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas.hashtable.PyObjectHashTable.get_item (pandas/hashtable.c:13696)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Pclass'"
+      "\u001b[0;31mKeyError\u001b[0m: 'Sex'"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x119ac6750>"
+       "<matplotlib.figure.Figure at 0x11502d290>"
       ]
      },
      "metadata": {},
@@ -838,37 +838,37 @@
      "data": {
       "text/plain": [
        "array([ 0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  1.,\n",
-       "        0.,  1.,  1.,  0.,  0.,  1.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,\n",
+       "        0.,  1.,  1.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,\n",
        "        1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,\n",
        "        1.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        1.,  1.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  1.,  1.,  0.,  1.,\n",
+       "        1.,  1.,  0.,  0.,  1.,  1.,  0.,  1.,  0.,  1.,  1.,  0.,  1.,\n",
        "        0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  1.,  1.,  0.,\n",
        "        0.,  1.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,\n",
-       "        1.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  0.,  0.,\n",
        "        1.,  1.,  1.,  1.,  0.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,\n",
-       "        1.,  0.,  1.,  1.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
-       "        0.,  0.,  1.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,\n",
+       "        1.,  1.,  0.,  1.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,  1.,  1.,  0.,  1.,\n",
        "        1.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
        "        0.,  1.,  0.,  0.,  0.,  1.,  1.,  0.,  1.,  0.,  0.,  1.,  0.,\n",
        "        1.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,  1.,\n",
-       "        0.,  1.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  1.,  0.,  0.,\n",
+       "        0.,  1.,  0.,  1.,  1.,  0.,  1.,  0.,  0.,  0.,  1.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,  1.,\n",
-       "        0.,  1.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
+       "        0.,  1.,  1.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
        "        0.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
        "        1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,\n",
+       "        0.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
        "        0.,  1.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  1.,  0.,  1.,  0.,  1.,  0.,  1.,  1.,\n",
-       "        0.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,  1.,  0.,  1.,  1.,  0.,\n",
+       "        0.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,\n",
        "        1.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  1.,  1.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,\n",
        "        0.,  1.,  0.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,  1.,  0.,  1.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  0.,  0.,  1.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  0.,\n",
        "        0.,  0.])"
       ]
      },
