Modified scaling and training code

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "### Feat7/wip (Acc: on test set 0.8256)\n",
     "#### Slightly worse than feat2\n",
-    "Branced from EDA1 for feature engineering based on knowledge obtained from EDA\n",
+    "\n",
+    "Branced from feat7 with XGboost to start training model with SVM\n",
+    "- Scaling numerical feature with 0-1 range\n",
     "- Assign age to NaN values based on initials\n",
     "- Assign S to NaN values\n",
     "- Dropped Cabin, name, ticket and passengerID"
@@ -21,34 +23,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "M\tTitanic.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Switched to a new branch 'feat7(EDA1)/SVM/wip'\n"
+      "  CV_check\n",
+      "  EDA1/wip\n",
+      "  EDA2/wip\n",
+      "  cost1/feat1/wip\n",
+      "  cost1/feat2/wip\n",
+      "  cost1/wip\n",
+      "  feat1/score1/wip\n",
+      "  feat1/wip\n",
+      "  feat2/score1/wip\n",
+      "  feat2/wip\n",
+      "  feat3/wip\n",
+      "  feat4/wip\n",
+      "  feat5/wip\n",
+      "  feat6/pclass/wip\n",
+      "  feat6/wip\n",
+      "* feat7(EDA1)/SVM/wip\n",
+      "  feat7(EDA1)/pclass/wip\n",
+      "  feat7(EDA1)/wip\n",
+      "  feat8(EDA2)/wip\n",
+      "  feat9/EDA2/wip\n",
+      "  master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout -b 'feat7(EDA1)/SVM/wip'"
+    "git branch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -57,9 +72,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat7(EDA1)/wip d119015] Modified head markdown\n",
-      " 1 file changed, 6 insertions(+), 6 deletions(-)\n",
-      "Branch feat7(EDA1)/wip set up to track remote branch feat7(EDA1)/wip from origin.\n"
+      "[feat7(EDA1)/SVM/wip d66a2ac] new SVM branched\n",
+      " 1 file changed, 12 insertions(+), 9 deletions(-)\n",
+      "Branch feat7(EDA1)/SVM/wip set up to track remote branch feat7(EDA1)/SVM/wip from origin.\n"
      ]
     },
     {
@@ -67,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   11d36d8..d119015  feat7(EDA1)/wip -> feat7(EDA1)/wip\n"
+      " * [new branch]      feat7(EDA1)/SVM/wip -> feat7(EDA1)/SVM/wip\n"
      ]
     }
    ],
@@ -75,7 +90,7 @@
     "%%bash\n",
     "git add 'Titanic.ipynb'\n",
     "git add 'Test_data.ipynb'\n",
-    "git commit -m 'new SVM branched'\n",
+    "git commit -m 'Modified scaling and training code'\n",
     "git push --set-upstream origin 'feat7(EDA1)/SVM/wip'"
    ]
   },
@@ -87,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "filename= 'feat7.sav'"
+    "filename= 'feat7_svm.sav'"
    ]
   },
   {
@@ -1409,6 +1424,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Feature Scaling: SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "X = min_max_scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Feature Evaluation"
    ]
   },
@@ -1973,21 +2008,19 @@
     }
    ],
    "source": [
-    "import xgboost as xgb\n",
+    "#import xgboost as xgb\n",
+    "from sklearn import svm\n",
     "from sklearn.grid_search import GridSearchCV\n",
     "\n",
-    "clf = xgb.XGBClassifier(\n",
-    "        nthread = 1,\n",
-    "        silent = 1,\n",
-    "        )\n",
+    "clf = svm.SVC()\n",
     "# specify parameters via map\n",
-    "parameters = {'objective':['binary:logistic'],\n",
-    "              'learning_rate': [0.05], #so called `eta` value\n",
-    "              'max_depth': [5,6,7,8],\n",
-    "              'subsample': [0.2,0.4,0.6,0.8],\n",
-    "              'colsample_bytree': [0.6,0.7,0.8]}\n",
-    "xgb_model = xgb.XGBClassifier()\n",
-    "clf = GridSearchCV(xgb_model, parameters, n_jobs=1, \n",
+    "parameters = {'kernel':['linear', 'poly', 'rbf', 'sigmoid'],\n",
+    "              'degree':[2,3,4],\n",
+    "              'C': [(2**exp for exp in range(-7, 17))], \n",
+    "              'gamma': [(2**exp for exp in range(-17, 7))]\n",
+    "             }\n",
+    "#xgb_model = xgb.XGBClassifier()\n",
+    "clf = GridSearchCV(clf, parameters, n_jobs=1, \n",
     "                   cv=4, \n",
     "                   scoring='roc_auc',\n",
     "                   verbose=2, refit=False)\n",
@@ -2046,14 +2079,11 @@
     }
    ],
    "source": [
-    "clf2 = xgb.XGBClassifier(\n",
-    "        nthread = 1,\n",
-    "        silent = 1,\n",
-    "        colsample_bytree = best_param_4CV['colsample_bytree'],\n",
-    "        learning_rate = best_param_4CV['learning_rate'],\n",
-    "        max_depth =  best_param_4CV['max_depth'],\n",
-    "        objective = best_param_4CV['objective'],\n",
-    "        subsample = best_param_4CV['subsample']\n",
+    "clf2 = svm.SVC(\n",
+    "        kernel = best_param_4CV['kernel'],\n",
+    "        degree = best_param_4CV['degree'],\n",
+    "        C =  best_param_4CV['C'],\n",
+    "        gamma = best_param_4CV['gamma'],\n",
     "        )\n",
     "clf2.fit(X_train,y_train)\n",
     "from sklearn.metrics import accuracy_score\n",
